[package]
name = "timbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features=["ws", "openssl", "abigen"] }

color-eyre = "0.6"
console-subscriber = { version = "0.1", optional = true }
criterion = { version = "0.3", optional = true, features = [ "async_tokio" ] }
eyre = "0.6"
futures = "0.3"
hyper = { version = "^0.14.17", features = [ "server", "tcp", "http1", "http2" ] }
itertools = "0.10"
mimalloc = { version = "0.1", default-features = false, optional = true }
once_cell = "1.8"
prometheus = { version = "0.13", features = [ "process" ] }
proptest = { version = "1.0", optional = true }
serde = "1.0"
serde_json = "1.0"
smallvec = { version = "^1.6.1", features = [ "serde" ] }
structopt = "0.3"

anyhow = "1.0.37"
thiserror = "1.0"
tokio = { version = "1.17", features = [ "signal", "macros", "rt", "sync", "time", "rt-multi-thread" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json" ] }
url = "2.2"
users = "0.11"

gumdrop = "0.8.1"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

notify-rust = "4"
